crates/pg_syntax/tests/snapshots/postgres_regress/truncate@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE trunc_c (a serial PRIMARY KEY);
---
CreateStmt@0..44
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..20
    Ident@13..20 "trunc_c"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ColumnDef@22..42
    Ident@22..23 "a"
    Whitespace@23..24 " "
    TypeName@24..30
      Ident@24..30 "serial"
    Whitespace@30..31 " "
    Constraint@31..42
      Primary@31..38 "PRIMARY"
      Whitespace@38..39 " "
      Key@39..42 "KEY"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

