crates/pg_syntax/tests/snapshots/postgres_regress/truncate@145.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nextval('truncate_a_id1');"
---
SelectStmt@0..33
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    FuncCall@7..31
      Ident@7..14 "nextval"
      Ascii40@14..15 "("
      AConst@15..31
        Sconst@15..31 "'truncate_a_id1'"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

