crates/pg_syntax/tests/snapshots/postgres_regress/truncate@148.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE truncparted1 PARTITION OF truncparted FOR VALUES IN (1);
---
CreateStmt@0..69
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..25
    Ident@13..25 "truncparted1"
  Whitespace@25..26 " "
  Partition@26..35 "PARTITION"
  Whitespace@35..36 " "
  Of@36..38 "OF"
  Whitespace@38..39 " "
  RangeVar@39..50
    Ident@39..50 "truncparted"
  Whitespace@50..51 " "
  For@51..54 "FOR"
  Whitespace@54..55 " "
  Values@55..61 "VALUES"
  Whitespace@61..62 " "
  PartitionBoundSpec@62..67
    InP@62..64 "IN"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..67
      Iconst@66..67 "1"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

