crates/pg_syntax/tests/snapshots/postgres_regress/truncate@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE trunc_d (a int REFERENCES trunc_c);
---
CreateStmt@0..48
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..20
    Ident@13..20 "trunc_d"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ColumnDef@22..46
    Ident@22..23 "a"
    Whitespace@23..24 " "
    TypeName@24..27
      IntP@24..27 "int"
    Whitespace@27..28 " "
    Constraint@28..46
      References@28..38 "REFERENCES"
      Whitespace@38..39 " "
      RangeVar@39..46
        Ident@39..46 "trunc_c"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

