crates/pg_syntax/tests/snapshots/postgres_regress/truncate@151.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE truncparted;
---
TruncateStmt@0..21
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..20
    Ident@9..20 "truncparted"
  Ascii59@20..21 ";"

