crates/pg_syntax/tests/snapshots/postgres_regress/truncate@154.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION tp_chk_data(OUT pktb regclass, OUT pkval int, OUT fktb regclass, OUT fkval int)\n  RETURNS SETOF record LANGUAGE plpgsql AS $$\n  BEGIN\n    RETURN QUERY SELECT\n      pk.tableoid::regclass, pk.a, fk.tableoid::regclass, fk.a\n    FROM truncprim pk FULL JOIN truncpart fk USING (a)\n    ORDER BY 2, 4;\n  END\n$$;"
---
CreateFunctionStmt@0..320
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..27 "tp_chk_data"
  Ascii40@27..28 "("
  FunctionParameter@28..45
    OutP@28..31 "OUT"
    Whitespace@31..32 " "
    Ident@32..36 "pktb"
    Whitespace@36..37 " "
    TypeName@37..45
      Ident@37..45 "regclass"
  Ascii44@45..46 ","
  Whitespace@46..47 " "
  FunctionParameter@47..60
    OutP@47..50 "OUT"
    Whitespace@50..51 " "
    Ident@51..56 "pkval"
    Whitespace@56..57 " "
    TypeName@57..60
      IntP@57..60 "int"
  Ascii44@60..61 ","
  Whitespace@61..62 " "
  FunctionParameter@62..79
    OutP@62..65 "OUT"
    Whitespace@65..66 " "
    Ident@66..70 "fktb"
    Whitespace@70..71 " "
    TypeName@71..79
      Ident@71..79 "regclass"
  Ascii44@79..80 ","
  Whitespace@80..81 " "
  FunctionParameter@81..94
    OutP@81..84 "OUT"
    Whitespace@84..85 " "
    Ident@85..90 "fkval"
    Whitespace@90..91 " "
    TypeName@91..94
      IntP@91..94 "int"
  Ascii41@94..95 ")"
  Newline@95..96 "\n"
  Whitespace@96..98 "  "
  Returns@98..105 "RETURNS"
  Whitespace@105..106 " "
  Setof@106..111 "SETOF"
  Whitespace@111..112 " "
  TypeName@112..118
    Ident@112..118 "record"
  Whitespace@118..119 " "
  DefElem@119..135
    Language@119..127 "LANGUAGE"
    Whitespace@127..128 " "
    Ident@128..135 "plpgsql"
  Whitespace@135..136 " "
  DefElem@136..319
    As@136..138 "AS"
    Whitespace@138..139 " "
    List@139..319
      Sconst@139..319 "$$\n  BEGIN\n    RETURN ..."
  Ascii59@319..320 ";"

