crates/pg_syntax/tests/snapshots/postgres_regress/truncate@155.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE truncprim (a int PRIMARY KEY);
---
CreateStmt@0..43
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "truncprim"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  ColumnDef@24..41
    Ident@24..25 "a"
    Whitespace@25..26 " "
    TypeName@26..29
      IntP@26..29 "int"
    Whitespace@29..30 " "
    Constraint@30..41
      Primary@30..37 "PRIMARY"
      Whitespace@37..38 " "
      Key@38..41 "KEY"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

