crates/pg_syntax/tests/snapshots/postgres_regress/truncate@156.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE truncpart (a int REFERENCES truncprim)\n  PARTITION BY RANGE (a);"
---
CreateStmt@0..77
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "truncpart"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  ColumnDef@24..50
    Ident@24..25 "a"
    Whitespace@25..26 " "
    TypeName@26..29
      IntP@26..29 "int"
    Whitespace@29..30 " "
    Constraint@30..50
      References@30..40 "REFERENCES"
      Whitespace@40..41 " "
      RangeVar@41..50
        Ident@41..50 "truncprim"
  Ascii41@50..51 ")"
  Newline@51..52 "\n"
  Whitespace@52..54 "  "
  PartitionSpec@54..75
    Partition@54..63 "PARTITION"
    Whitespace@63..64 " "
    By@64..66 "BY"
    Whitespace@66..67 " "
    Range@67..72 "RANGE"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    PartitionElem@74..75
      Ident@74..75 "a"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

