crates/pg_syntax/tests/snapshots/postgres_regress/truncate@157.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE truncpart_1 PARTITION OF truncpart FOR VALUES FROM (0) TO (100);
---
CreateStmt@0..77
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "truncpart_1"
  Whitespace@24..25 " "
  Partition@25..34 "PARTITION"
  Whitespace@34..35 " "
  Of@35..37 "OF"
  Whitespace@37..38 " "
  RangeVar@38..47
    Ident@38..47 "truncpart"
  Whitespace@47..48 " "
  For@48..51 "FOR"
  Whitespace@51..52 " "
  Values@52..58 "VALUES"
  Whitespace@58..59 " "
  PartitionBoundSpec@59..75
    From@59..63 "FROM"
    Whitespace@63..64 " "
    Ascii40@64..65 "("
    AConst@65..66
      Iconst@65..66 "0"
    Ascii41@66..67 ")"
    Whitespace@67..68 " "
    To@68..70 "TO"
    Whitespace@70..71 " "
    Ascii40@71..72 "("
    AConst@72..75
      Iconst@72..75 "100"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

