crates/pg_syntax/tests/snapshots/postgres_regress/truncate@158.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE truncpart_2 PARTITION OF truncpart FOR VALUES FROM (100) TO (200)\n  PARTITION BY RANGE (a);"
---
CreateStmt@0..104
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "truncpart_2"
  Whitespace@24..25 " "
  Partition@25..34 "PARTITION"
  Whitespace@34..35 " "
  Of@35..37 "OF"
  Whitespace@37..38 " "
  RangeVar@38..47
    Ident@38..47 "truncpart"
  Whitespace@47..48 " "
  For@48..51 "FOR"
  Whitespace@51..52 " "
  Values@52..58 "VALUES"
  Whitespace@58..59 " "
  PartitionBoundSpec@59..77
    From@59..63 "FROM"
    Whitespace@63..64 " "
    Ascii40@64..65 "("
    AConst@65..68
      Iconst@65..68 "100"
    Ascii41@68..69 ")"
    Whitespace@69..70 " "
    To@70..72 "TO"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    AConst@74..77
      Iconst@74..77 "200"
  Ascii41@77..78 ")"
  Newline@78..79 "\n"
  Whitespace@79..81 "  "
  PartitionSpec@81..102
    Partition@81..90 "PARTITION"
    Whitespace@90..91 " "
    By@91..93 "BY"
    Whitespace@93..94 " "
    Range@94..99 "RANGE"
    Whitespace@99..100 " "
    Ascii40@100..101 "("
    PartitionElem@101..102
      Ident@101..102 "a"
  Ascii41@102..103 ")"
  Ascii59@103..104 ";"

