crates/pg_syntax/tests/snapshots/postgres_regress/truncate@159.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE truncpart_2_1 PARTITION OF truncpart_2 FOR VALUES FROM (100) TO (150);
---
CreateStmt@0..83
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..26
    Ident@13..26 "truncpart_2_1"
  Whitespace@26..27 " "
  Partition@27..36 "PARTITION"
  Whitespace@36..37 " "
  Of@37..39 "OF"
  Whitespace@39..40 " "
  RangeVar@40..51
    Ident@40..51 "truncpart_2"
  Whitespace@51..52 " "
  For@52..55 "FOR"
  Whitespace@55..56 " "
  Values@56..62 "VALUES"
  Whitespace@62..63 " "
  PartitionBoundSpec@63..81
    From@63..67 "FROM"
    Whitespace@67..68 " "
    Ascii40@68..69 "("
    AConst@69..72
      Iconst@69..72 "100"
    Ascii41@72..73 ")"
    Whitespace@73..74 " "
    To@74..76 "TO"
    Whitespace@76..77 " "
    Ascii40@77..78 "("
    AConst@78..81
      Iconst@78..81 "150"
  Ascii41@81..82 ")"
  Ascii59@82..83 ";"

